Adding extended color selection that lets the user choose colors that are not in the basic gradient.
git-svn-id: svn://localhost/HDBackup/SVNRepositories/PaintDroid/trunk@22 6a9be4b1-2cd3-9b4a-b3a2-91d46eab6722

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PaintDroid</string>
+    <string name="color_hex_value_title">Hex value:</string>
+    
 	<string name="new_image_title">New</string>
+	<string name="colors_title">Colors</string>
 </resources>
